<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5pt"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/label_user"
            android:textSize="28dp" />

        <EditText
            android:id="@+id/edtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5pt"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="28dp" />
    </LinearLayout>

    <LinearLayout
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10pt"
    android:layout_marginRight="10pt"
    android:layout_marginTop="3pt">

    <TextView
        android:id="@+id/textViewSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5pt"
        android:layout_weight="1"
        android:layout_below="@+id/edtSenha"
        android:text="@string/label_password"
        android:gravity="center_horizontal"
        android:textSize="27dp" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5pt"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="28dp" />
</LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnLogin"
            android:textSize="16pt"
            android:layout_marginRight="10px"></Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:layout_marginTop="3pt">

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_register"
            android:textSize="16pt"
            android:layout_marginRight="10px"></Button>

    </LinearLayout>
</LinearLayout>